[package]
name = "luma"
version = "0.1.0"
edition = "2024"

[dependencies]
async-lock = "3.4.2"
flume = "0.12.0"
vello = "0.7.0"
winit = "0.30.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.50.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
