[package]
name = "luma"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
flume = "0.12.0"
pollster = "0.4.0"
slotmap = "1.1.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-wasm = "0.2.1"
vello = "0.7.0"
winit = "0.30.13"
tokio = { version = "1.50.0", features = ["full"] }
color-eyre = "0.6.5"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
luma_macros = {path="./luma_macros"}

[workspace]
members = [
    "luma_macros"
]
resolver = "2"


[dependencies]
luma_macros = {workspace=true}
flume = {workspace=true}
pollster = {workspace=true}
slotmap = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
tracing-wasm = {workspace=true}
vello = {workspace=true}
winit = {workspace=true}
bytemuck = { version = "1.25.0", features = ["bytemuck_derive", "derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = {workspace=true}
color-eyre = {workspace=true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = {workspace=true}
console_log = {workspace=true}
wasm-bindgen ={workspace=true}
wasm-bindgen-futures = {workspace=true}
web-sys = {workspace=true}
anyhow = {workspace=true}
